# MLOPS2-banque

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
alembic/versions/: 139f2b88b435_create_ml_inputs.py  26205302d89c_create_ml_outputs.py  419d89d05f88_add_profiling_logs_table.py
notebooks/: 1_Analyse.ipynb  2_Nettoyage_Standardisation.ipynb  3_Feature_Engineering.ipynb  4_Modelisation copy.ipynb
notebooks/datadrift/: analyst.ipynb  load_data.ipynb
profiling/: profile_predict.py
src/: features.py  main.py  model_loader.py
src/config/: db.py
src/controllers/: home_controller.py  predict_controller.py
src/middleware/: profiling.py
src/models/: ml_inputs.py  ml_output.py  profiling.py
src/schemas/: ModelFeatures.py  PredictItemResult.py  PredictRequest.py  PredictResponse.py
src/seeds/: ml_models_seed.py
tests/: conftest.py
tests/functional/: test_home.py  test_predict.py
