[tool.poetry]
name = "mlops2-banque"
version = "0.1.0"
description = ""
authors = ["marintosti12 <marintosti12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
numpy = "^2.3.3"
pyarrow = "^21.0.0"
scikit-learn = "^1.7.2"
imbalanced-learn = "^0.14.0"
mlflow = "^3.4.0"
shap = "^0.48.0"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
notebook = "^7.4.7"
ipykernel = "^6.30.1"
missingno = "^0.5.2"
lightgbm = "^4.6.0"
fastapi = "^0.121.1"
pydantic = "^2.12.4"
sqlalchemy = "^2.0.44"
pydantic-settings = "^2.11.0"
psycopg = {extras = ["binary"], version = "^3.2.12"}
huggingface-hub = "^1.1.2"
dotenv = "^0.9.9"
evidently = "^0.7.16"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.5"
snakeviz = "^2.2.2"
gprof2dot = "^2025.4.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

